--- a/Assignment 22.ipynb
+++ b/Assignment 22.ipynb
@@ -3,297 +3,228 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b94cd7d0-e608-41fd-87a0-b8b19c56769b",
+   "id": "3917005f-ba60-48d1-ab54-f35141b4ddef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q1. Create a Pandas Series that contains the following data: 4, 8, 15, 16, 23, and 42. Then, print the series."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "1b7a6e42-686f-42ff-9296-438dda6b3928",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0     4\n",
-      "1     8\n",
-      "2    15\n",
-      "3    16\n",
-      "4    23\n",
-      "5    42\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Create a Pandas Series\n",
-    "data = [4, 8, 15, 16, 23, 42]\n",
-    "series = pd.Series(data)\n",
-    "\n",
-    "# Print the Series\n",
-    "print(series)"
+    "Go to this given URL and solve the following questions URL:https://www.youtube.com/@PW-Foundation/videos"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb25c28-0846-4ca6-84ee-5b3143e78925",
+   "id": "0015e1ef-ceca-4e84-b3f8-c23f2b556e26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q2. Create a variable of list type containing 10 elements in it, and apply pandas.Series function on the\n",
-    "variable print it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "7c8440b1-be0c-49ed-a698-4d24643e1b75",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0     10\n",
-      "1     20\n",
-      "2     30\n",
-      "3     40\n",
-      "4     50\n",
-      "5     60\n",
-      "6     70\n",
-      "7     80\n",
-      "8     90\n",
-      "9    100\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Create a list of 10 elements\n",
-    "my_list = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
-    "\n",
-    "# Convert the list to a Pandas Series\n",
-    "my_series = pd.Series(my_list)\n",
-    "\n",
-    "# Print the Series\n",
-    "print(my_series)"
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from webdriver_manager.chrome import ChromeDriverManager"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ccc72b4-bcca-4418-8a6f-41f4e16efed6",
+   "id": "b96189f9-00e8-46f4-8f6e-c8c4a2b28ce4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q3. Create a Pandas DataFrame that contains the following data:\n",
-    "    \n",
-    "Name\n",
-    "Alice\n",
-    "Bob\n",
-    "Claire\n",
-    "\n",
-    "Age\n",
-    "25\n",
-    "30\n",
-    "27\n",
-    "\n",
-    "Gender\n",
-    "Female\n",
-    "Male\n",
-    "Female\n",
-    "\n",
-    "Then, print the DataFrame."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "281eac92-70a7-4027-bd4d-d3ae4325dd18",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Name  Age  Gender\n",
-      "0   Alice   25  Female\n",
-      "1     Bob   30    Male\n",
-      "2  Claire   27  Female\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Create a dictionary with the data\n",
-    "data = {'Name': ['Alice', 'Bob', 'Claire'],\n",
-    "        'Age': [25, 30, 27],\n",
-    "        'Gender': ['Female', 'Male', 'Female']}\n",
-    "\n",
-    "# Create a Pandas DataFrame from the dictionary\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "# Print the DataFrame\n",
-    "print(df)\n"
+    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
+    "driver.get(\"https://www.youtube.com/@PW-Foundation/videos\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb05575a-4e67-403d-a2cc-4063db0dc181",
+   "id": "643c3005-2d1f-428f-b997-159948849a16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q4. What is ‘DataFrame’ in pandas and how is it different from pandas.series? Explain with an example.\n",
-    "Ans. n Pandas, a DataFrame is a two-dimensional labeled data structure that consists of rows and columns, similar to a table in\n",
-    "a relational database or an Excel spreadsheet. Each column in a DataFrame can be of a different data type, such as float, int, or string.\n",
-    "\n",
-    "On the other hand, a Pandas Series is a one-dimensional labeled array that can hold data of any type. The data can be labeled \n",
-    "with an index, which can be of any type, such as integers or strings.\n",
-    "\n",
-    "The main difference between a Pandas Series and a DataFrame is that a Series represents a single column of data, while a DataFrame\n",
-    "represents multiple columns of data."
+    "Q1. Write a python program to extract the video URL of the first five videos."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138f0437-cb6a-4dc9-ba78-8ca7778a5f4e",
+   "id": "03a4be20-74d3-4a82-8cf9-9bca6e2bb71b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    10\n",
-      "1    20\n",
-      "2    30\n",
-      "3    40\n",
-      "4    50\n",
-      "dtype: int64\n",
-      "   A  B\n",
-      "0  1  a\n",
-      "1  2  b\n",
-      "2  3  c\n",
-      "3  4  d\n",
-      "4  5  e\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Create a Pandas Series with some data\n",
-    "s = pd.Series([10, 20, 30, 40, 50])\n",
-    "\n",
-    "# Create a Pandas DataFrame with two columns\n",
-    "df = pd.DataFrame({'A': [1, 2, 3, 4, 5], 'B': ['a', 'b', 'c', 'd', 'e']})\n",
-    "\n",
-    "# Print the Series and DataFrame\n",
-    "print(s)\n",
-    "print(df)"
+    "links = driver.find_elements(By.TAG_NAME,\"a\")\n",
+    "urls = []\n",
+    "for link in links:\n",
+    "    url = link.get_attribute(\"href\")\n",
+    "    urls.append(url)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5549b543-d6a8-4fe6-8688-9a24d5f875f6",
+   "id": "19451e77-3e0e-4fd6-a831-7b5fe56668ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q5. What are some common functions you can use to manipulate data in a Pandas DataFrame? Can\n",
-    "you give an example of when you might use one of these functions?\n",
-    "Ans. Pandas provides a wide range of functions for manipulating data in a DataFrame. Here are some of the most commonly used functions:\n",
-    "\n",
-    "head() - Returns the first n rows of the DataFrame. Useful for quickly checking the structure of the DataFrame.\n",
-    "\n",
-    "tail() - Returns the last n rows of the DataFrame.\n",
-    "\n",
-    "describe() - Generates descriptive statistics for the DataFrame, such as count, mean, standard deviation, minimum, maximum, etc.\n",
-    "\n",
-    "info() - Provides information about the DataFrame, such as the data types of each column and the number of non-null values.\n",
-    "\n",
-    "sort_values() - Sorts the DataFrame by one or more columns.\n",
-    "\n",
-    "groupby() - Groups the DataFrame by one or more columns, allowing you to perform operations on each group.\n",
-    "\n",
-    "drop() - Removes one or more columns or rows from the DataFrame.\n",
-    "\n",
-    "fillna() - Fills in missing values in the DataFrame with a specified value.\n",
-    "\n",
-    "apply() - Applies a function to each column or row in the DataFrame.\n",
-    "\n",
-    "pivot_table() - Creates a pivot table based on the data in the DataFrame."
+    "first_5_links = []\n",
+    "for url in urls[17:25]:\n",
+    "    if url == None:\n",
+    "        continue\n",
+    "    else:\n",
+    "        first_5_links.append(url)\n",
+    "print(first_5_links)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7e4c23e-edc9-450a-b61b-0d60da2c6a71",
+   "id": "d132a7ea-c3ad-44e0-89c8-644e3d4bab3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q6. Which of the following is mutable in nature Series, DataFrame, Panel?\n",
-    "Ans. Series and DataFrame are mutable in nature, whereas Panel is deprecated since pandas version 1.0.0 and is \n",
-    "no longer recommended for use."
+    "Q2. Write a python program to extract the URL of the video thumbnails of the first five videos."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb773c38-4b7d-4035-ae5d-0a3f36764061",
+   "id": "d9094c2f-7c1e-4ae2-b3af-90fa43f6503d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q7. Create a DataFrame using multiple Series. Explain with an example.\n",
-    "Ans. We can create a DataFrame using multiple Series by passing them as a dictionary to the DataFrame constructor. Each Series will become a column in the resulting DataFrame, and the index of the DataFrame\n",
-    "will be the union of the indices of the input Series."
+    "driver.get(\"https://www.youtube.com/@PW-Foundation/videos\")\n",
+    "links = driver.find_elements(By.TAG_NAME,\"img\")\n",
+    "thumbnails = []\n",
+    "for thumbnail in links[8:18]:\n",
+    "    thumbnail = thumbnail.get_attribute(\"src\")\n",
+    "    if thumbnail == None:\n",
+    "        continue\n",
+    "    else:\n",
+    "        thumbnails.append(thumbnail)\n",
+    "print(len(thumbnails))\n",
+    "for i in thumbnails:\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "90d80406-1efa-41dc-a96c-f7a6e989b74f",
+   "execution_count": null,
+   "id": "095e557b-7835-4976-9619-b2f2ccb7512f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Name  Age  Gender\n",
-      "0   Alice   25  Female\n",
-      "1     Bob   30    Male\n",
-      "2  Claire   27  Female\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "Q3. Write a python program to extract the title of the first five videos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00c49427-dbfe-4b12-af24-14fc03fd2f66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#title\n",
+    "driver.get(\"https://www.youtube.com/@PW-Foundation/videos\")\n",
+    "titles = driver.find_elements(By.TAG_NAME,\"yt-formatted-string\")\n",
+    "titles_video = []\n",
+    "# print(links)\n",
+    "for i in titles[15:35:4]:\n",
+    "    titles_video.append(i.text)\n",
+    "print(titles_video)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91a25e14-d78b-49ba-951d-ea139648438e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q4. Write a python program to extract the number of views of the first five videos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd166a55-fa6b-4ee9-b2c1-675948e5ef61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#views\n",
+    "driver.get(\"https://www.youtube.com/@PW-Foundation/videos\")\n",
+    "views = driver.find_elements(By.TAG_NAME,\"span\")\n",
+    "video_views = []\n",
+    "for i in views[23:48]:\n",
+    "    if str(\"views\") in i.text:\n",
+    "        video_views.append(i.text)\n",
+    "print(video_views)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "945735ff-65c6-4940-b5f2-8c36a5b5b68a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q5. Write a python program to extract the time of posting of video for the first five videos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64ba4673-59b1-47c0-bb30-875cedd48adc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#posting time\n",
+    "driver.get(\"https://www.youtube.com/@PW-Foundation/videos\")\n",
+    "times = driver.find_elements(By.TAG_NAME,\"span\")\n",
+    "video_times = []\n",
+    "for i in times[24:]:\n",
+    "    if str(\"day\") in i.text:\n",
+    "        video_times.append(i.text)\n",
+    "print(video_times)\n",
+    "['1 day ago', '2 days ago', '3 days ago', '4 days ago', '9 days ago']\n",
+    "Note: Save all the data scraped in the above questions in a CSV file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a51d9045-857a-4703-9207-bca9a490c925",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(first_5_links)\n",
+    "# print(thumbnails)\n",
+    "# print(titles_video)\n",
+    "# print(video_views)\n",
+    "print(video_times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0958e0b0-4c74-4a86-a672-9c006991e90a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7cf1dd4-b4a8-4bab-8514-82cd99f5c57b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(first_5_links)-1):\n",
+    "    data_csv = str(first_5_links[i]),str(thumbnails[i]),str(titles_video[i]),str(video_views[i]),str(video_times[i])    \n",
     "\n",
-    "# create a series for each column\n",
-    "names = pd.Series(['Alice', 'Bob', 'Claire'])\n",
-    "ages = pd.Series([25, 30, 27])\n",
-    "genders = pd.Series(['Female', 'Male', 'Female'])\n",
-    "\n",
-    "# create a dictionary with keys as column names and values as series\n",
-    "data = {'Name': names, 'Age': ages, S'Gender': genders}\n",
-    "\n",
-    "# create the DataFrame\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "# print the DataFrame\n",
-    "print(df)"
+    "    with open('video_details.csv', 'w',encoding='utf-8', newline='') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "        writer.writerow(data_csv)\n",
+    "print('done"
    ]
   }
  ],
